--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,23 @@
 ---
 # defaults file for ansible-role-lmod
+
+# These are all the Lmod settings we will define as enviroment variables in /etc/profile.d/zzz_lmod_settings.sh
+# https://lmod.readthedocs.io/en/latest/090_configuring_lmod.html
+
+LMOD_AUTO_SWAP: false
+
+LMOD_CACHED_LOADS: true
+
+LMOD_CASE_INDEPENDENT_SORTING: true
+
+LMOD_DISABLE_NAME_AUTOSWAP: true
+
+LMOD_EXACT_MATCH: true
+
+LMOD_MPATH_AVAIL: true
+
+LMOD_PIN_VERSIONS: true
+
+LMOD_MODULEPATH: "/soft/modules/all"
+
+LMOD_ADD_EPEL_REPO: true
