--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
 
+  role_name: lmod
   author: Pablo Escobar Lopez
   description: Install Lmod package and configures it using environment variables in a profile file
 
@@ -32,7 +33,10 @@ galaxy_info:
       versions:
         - 7
 
-  galaxy_tags: []
+  galaxy_tags:
+    - lmod
+    - hpc
+    - "environment modules"
   # List tags for your role here, one per line. A tag is a keyword that describes
   # and categorizes the role. Users find roles by searching for tags. Be sure to
   # remove the '[]' above, if you add tags to this list.
